<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_realhome">

    <fragment
        android:id="@+id/navigation_realhome"
        android:name="com.example.myapplication.ui.realhome.RealHomeFragment"
        android:label="@string/title_realhome"
        tools:layout="@layout/fragment_realhome" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.myapplication.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="사용자정보"
        tools:layout="@layout/fragment_notifications" />

</navigation>