<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.notifications.NotificationsFragment">

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_login_editview"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_login_editview"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_login_editview"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_login_editview"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rectangle_login_editview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phonenum"
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_phonenum"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_phonenum"
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_phonenum"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_name"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_phonenum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_phonenum"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="62dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_name"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_phonenum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_phonenum"
        app:layout_constraintTop_toBottomOf="@+id/et_phonenum" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_age"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

    <TextView
        android:id="@+id/et_age"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="62dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_age"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="성별"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_age"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/et_gender"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="62dp"
        android:background="@null"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="성별"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_age"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <TextView
        android:id="@+id/tv_emphone"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="비상연락처"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_gender"
        app:layout_constraintStart_toStartOf="@+id/et_gender"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

    <EditText
        android:id="@+id/et_emphone"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_emphone"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textColorHint="@color/moregray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_gender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_gender"
        app:layout_constraintTop_toBottomOf="@+id/et_gender" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_blue"
        android:fontFamily="@font/noto_sans"
        android:text="수정"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_5" />

    <!--    <TextView-->
    <!--        android:id="@+id/Sex"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="125dp"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:fontFamily="@font/archivo_bold"-->
    <!--        android:text="성별 :"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/Name" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_SexValue"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:fontFamily="sans-serif-condensed-medium"-->
    <!--        android:text="Sex_Value"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/Sex"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_NameValue" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/Name"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="125dp"-->
    <!--        android:layout_marginTop="264dp"-->
    <!--        android:fontFamily="@font/archivo_bold"-->
    <!--        android:text="이름 :"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_NameValue"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="264dp"-->
    <!--        android:fontFamily="sans-serif-condensed-medium"-->
    <!--        android:text="Name_Value"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/Name"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_AgeValue"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="372dp"-->
    <!--        android:fontFamily="sans-serif-condensed-medium"-->
    <!--        android:text="Age_Value"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/Age"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/Age"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="124dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:fontFamily="@font/archivo_bold"-->
    <!--        android:text="나이 :"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/Sex" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_emPhoneNumValue"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:fontFamily="sans-serif-condensed-medium"-->
    <!--        android:text="EM_PhoneNum_Value"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/em_PhoneNum"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_phoneNumValue" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/em_PhoneNum"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="46dp"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        android:fontFamily="@font/archivo_bold"-->
    <!--        android:text="긴급 연락처 :"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_phoneNumValue"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="428dp"-->
    <!--        android:fontFamily="sans-serif-condensed-medium"-->
    <!--        android:text="phoneNum_Value"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/phoneNum"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/phoneNum"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="100dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:fontFamily="@font/archivo_bold"-->
    <!--        android:text="연락처 :"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/Age" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="326dp"-->
    <!--        android:layout_height="167dp"-->
    <!--        android:layout_marginStart="34dp"-->
    <!--        android:layout_marginEnd="34dp"-->
    <!--        android:src="@drawable/calmdown_main"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.235"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.132"-->
    <!--        tools:srcCompat="@drawable/calmdown_main" />-->

    <!--    <Button-->
    <!--        android:id="@+id/check"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="160dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:text="수정"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:background="@drawable/btn_blue"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_emPhoneNumValue" />-->

</androidx.constraintlayout.widget.ConstraintLayout>